--- a/Northwind.Application/Views/Products/Index.cshtml
+++ b/Northwind.Application/Views/Products/Index.cshtml
@@ -11,6 +11,7 @@
     ViewData["ForeignKeyName"] = ViewBag.ForeignKeyName;
     ViewData["SelectListName"] = ViewBag.SelectListName;
     ViewData["PageStartNumbering"] = ViewBag.PageStartNumbering;
+    ViewData["ColumnWidths"] = ViewBag.ColumnWidths;
 }
 
 <h1>@(selectListHeader != null && selectListHeader != "" ? $"\"{selectListHeader}\"" : string.Empty) Product List</h1>
