--- a/Northwind.Application/Views/Shared/_TableFormPartial.cshtml
+++ b/Northwind.Application/Views/Shared/_TableFormPartial.cshtml
@@ -1,5 +1,7 @@
 ﻿@using System.Reflection;
+@using Microsoft.IdentityModel.Tokens
 @using Northwind.Application.Constants
+@using Northwind.Application.Services
 @using Northwind.Bll.Services.Extensions
 @using System.Globalization
 @model IEnumerable<object>
@@ -14,6 +16,7 @@
     string ForeignKeyValue => ViewData["ForeignKeyValue"]?.ToString() ?? "";
     int? PageStartNumbering => (int?)ViewData["PageStartNumbering"] ?? 1;
     string? BackButtonName => $"To {CultureInfo.CurrentCulture.TextInfo.ToTitleCase(ForeignKeyName.Replace("Id", ""))} Details";
+    Dictionary<string, int>? ColumnWidths => ViewData["ColumnWidths"] as Dictionary<string, int>;
 
     PropertyInfo[] Properties => Model.Any() ? Model.First().GetType().GetProperties() : new PropertyInfo[0];
     IEnumerable<string> PropertyNames => Properties.Select(x => x.Name).Where(x => !x.Contains("Id"));
@@ -78,26 +81,23 @@
     }
 
     bool IsDetail => ControllerName!.Contains("Detail");
-
-    string GetStyle(object? value)
-    {
-        var status = value != null && value is string ? value as string : "";
-
-        var color = value switch
-        {
-            SessionValues.Confirmed => "black",
-            SessionValues.InProgress => "goldenrod",
-            SessionValues.Completed => "forestgreen",
-            SessionValues.NotConfirmed => "gray",
-            _ => ""
-        };
-
-        return color.Length > 0 ? $"color:{color};font-weight:bold;" : "";
-    }
 }
 
 <div class="pt-1">
-    <table class="table">
+    <table class="table table-striped" style="width:100%">
+        <colgroup>
+            <col span="1">
+            @foreach (var name in PropertyNames)
+            {
+                <col span="1" style="@(ColumnWidths != null ? $"width:{ColumnWidths[name]}%" : "")">
+            }
+
+            @if (User.IsInRole(UserRoles.Admin) || User.IsInRole(UserRoles.Owner))
+            {
+                <col span="1">
+            }
+        </colgroup>
+
         <thead style="height:60px;">
             <tr>
                 <th class="align-content-center">№</th>
@@ -145,9 +145,11 @@
 
                         <td class="align-content-center">@(number++)</td>
 
-                        @foreach (var value in GetPropertyValues(item))
+                        @foreach (var value in ViewAdditions.GetPropertyValues(item, PropertyNames))
                         {
-                            <td class="align-content-center" style="@(GetStyle(value))" onclick=@(!IsDetail ? $"location.href='{GetLink(GetId(item)!)}'" : "")>
+                            var style = ViewAdditions.GetOrderStatusStyle(value);
+
+                            <td class="align-content-center" style="@style" onclick=@(!IsDetail ? $"location.href='{GetLink(GetId(item)!)}'" : "")>
                                 @if (value is byte[])
                                 {
                                    <img src="data:image/bmp;base64,@Convert.ToBase64String(value as byte[] ?? new byte[0])" style="height:60px;width:60px;" />
