--- a/Northwind.Application/Views/Shared/_Layout.cshtml
+++ b/Northwind.Application/Views/Shared/_Layout.cshtml
@@ -47,6 +47,9 @@
                             <li class="nav-item">
                                 <a class="nav-link text-dark" asp-controller="Categories" asp-action="Index">Catalogue</a>
                             </li>
+                            <li class="nav-item">
+                                <a class="nav-link text-dark" asp-controller="Orders" asp-action="Workflow">Workflow</a>
+                            </li>
                         }
                         else
                         {
