--- a/Northwind.Application/Views/Shared/_Layout.cshtml
+++ b/Northwind.Application/Views/Shared/_Layout.cshtml
@@ -30,7 +30,7 @@
                         @if (User.IsInRole(UserRoles.Owner) || User.IsInRole(UserRoles.Admin))
                         {
                             <li class="nav-item">
-                                <a class="nav-link text-dark" asp-controller="Employees" asp-action="Index">Employees</a>
+                                <a class="nav-link text-dark" asp-controller="Employees" asp-action="Index">Sellers</a>
                             </li>                            
                             <li class="nav-item">
                                 <a class="nav-link text-dark" asp-controller="Customers" asp-action="Index">Customers</a>
