--- a/Northwind.Application/Views/Shared/_GridFormPartial.cshtml
+++ b/Northwind.Application/Views/Shared/_GridFormPartial.cshtml
@@ -37,49 +37,77 @@
     }
 }
 
-<form id="form" method="get" asp-action=@ViewData["ActionName"]>
-    @if (User.IsInRole(UserRoles.Admin) || User.IsInRole(UserRoles.Owner))
+<div>
+    <h1>@ControllerName</h1>
+
+    @if (User.IsInRole(UserRoles.Admin) || User.IsInRole(UserRoles.Owner) || User.IsInRole(UserRoles.Employee))
     {
+        @await Html.PartialAsync("_IndexButtonsPartial", null as SelectList)
+
         <div class="select-all">
-            <input onchange="onChangeSelectAllHandler(this.checked)" id="selectAllCheckbox" type="checkbox" @Disabled />
+            <input form="form" onchange="onChangeSelectAllHandler(this.checked)" id="selectAllCheckbox" type="checkbox" @Disabled />
             <label>Select all</label>
         </div>
     }
 
-    <div class="container">
-        @foreach (var item in Model)
-        {
-            <div class="item">
-                <div onclick="location.href = '@GetLink(GetId(item))'">
-                    <img src="data:image/bmp;base64,@Convert.ToBase64String(GetPropertyValue<byte[]>(item, "Picture", "Photo", "Image") as byte[] ?? new byte[0])" style="height:120px;width:120px;" />
-                </div>
-                <div class="fw-bold">
-                    @(GetPropertyValue<string>(item, "Name") as string)
-                </div>
-
-                @if (User.IsInRole(UserRoles.Admin) || User.IsInRole(UserRoles.Owner))
-                {
-                    <div>
-                        <input name="ids" type="checkbox" id="@GetId(item)" value="@GetId(item)" onclick="onChangeHandler(this)" @Disabled />
+    <form id="form" method="get" asp-action=@ViewData["ActionName"]>
+        <div class="container">
+            @foreach (var item in Model)
+            {
+                <div class="item">
+                    <div onclick="location.href = '@GetLink(GetId(item))'">
+                        <img class="img" src="data:image/bmp;base64,@Convert.ToBase64String(GetPropertyValue<byte[]>(item, "Picture", "Photo", "Image") as byte[] ?? new byte[0])" />
                     </div>
-                }
-            </div>
-        }
-    </div>
-</form>
+
+                    @if (User.IsInRole(UserRoles.Admin) || User.IsInRole(UserRoles.Owner))
+                    {
+                        <input class="check" name="ids" type="checkbox" id="@GetId(item)" value="@GetId(item)" onclick="onChangeHandler(this)" @Disabled />
+                    }
+
+                    <div class="fw-bold">
+                        @(GetPropertyValue<string>(item, "Name") as string)
+                    </div>                    
+                </div>
+            }
+        </div>
+    </form>
+</div>
+
 
 <style>
+    .check {
+        margin-top:8px;
+    }
+
     .select-all {
         display: flex;
         flex-flow: row wrap;
         align-items: center;
         column-gap: 0.5rem;
-        margin: 0.2rem
+        margin: 0.2rem;
+        width: fit-content;
     }
 
-    img {
+    .container {
+        display: flex;
+        flex-flow: row wrap;
+        gap: 1rem;
+        place-content: center;
+    }
+
+    .item {
+        display: flex;
+        flex-flow: column wrap;
+        place-items: center;
+        place-content: center;
+        height: 190px;
+        width: 130px
+    }
+
+    .img {
         cursor: pointer;
-        height: 130px;
+        height: 120px;
+        width: 120px;
     }
 
     img:hover, img:active {
@@ -87,22 +115,4 @@
         width:130px !important;
     }
 
-    .container {
-        padding:10px;
-        display: flex;
-        flex-flow: row wrap;
-        max-height: 100%;
-        width: 100vw;
-        gap: 2rem;
-        place-content: center;
-    }
-
-    .item {
-        display: flex;
-        flex-flow: column wrap;
-        height: 180px;
-        width:130px;
-        place-items: center;
-        place-content: space-between;
-    }
 </style>
